tests/fixtures/valid/real_world_smoke/11_unicode_strings.pine
//@version=6
indicator("Unicode")
msg = "Привет мир"
multiline = """multi
строка"""
plot(close)
