tests/fixtures/invalid/semantic/continue_outside_loop.pine
//@version=6
indicator("Bad")
continue
